{
    "name": "Cat_InputAction",
    "maps": [
        {
            "name": "Touch",
            "id": "772f5f1e-4f7e-4c09-be92-3380a62be062",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "4ebadd24-1311-4b9d-a3c9-830b50fea90a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "f7f6ba86-2d68-480c-a66a-33a351198b9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "bed7d6a3-6edc-46cc-a4d7-fdc6fe5a1548",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c49b211-c2b2-4d98-ba9e-b6f0c8e954a9",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "944e8aff-a564-4911-b042-aede69c119e5",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "255e5f66-0b30-4866-9937-70b0aa5ef033",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}